# project-spine

./: .gitignore  README.md  pyproject.toml  spine_app.py
project_spine_spine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: augment_dataset.py  sample_fracatlas.py  train_classifier.py  train_landmark_detector.py
spine/: config.py  pipeline.py
spine/stages/: analyzer.py  detector.py  verifier.py
tests/: test_cobb_angle.py
